syntax = "proto3";
package deduppkg;

import "deduppkg/imported.proto";
import "otherpkg/otherpkg.proto";

message TestMessage {
    int32 a_int32       = 1;
    int64 a_int64       = 2;
    uint32 a_uint32     = 3;
    uint64 a_uint64     = 4;
    sint32 a_sint32     = 5;
    sint64 a_sint64     = 6;
    fixed32 a_fixed32   = 7;
    fixed64 a_fixed64   = 8;
    sfixed32 a_sfixed32 = 9;
    sfixed64 a_sfixed64 = 10;
    bool a_bool         = 11;
    string a_string     = 12;
    bytes a_bytes       = 13;
    double a_double     = 14;
    float a_float       = 15;
    repeated string an_array_string            = 16;
    map<string, int32> a_map_of_int32          = 17;
    map<string, NestedMessage> a_map_of_nested = 18;

    NestedMessage a_nested_message             = 19;
    ImportedMessage an_imported_message       = 20;

    enum Corpus {
        UNIVERSAL = 0;
        WEB       = 1;
        IMAGES    = 2;
        LOCAL     = 3;
        NEWS      = 4;
        PRODUCTS  = 5;
        VIDEO     = 6;
    }
    Corpus an_enum                                                = 21;
    otherpkg.MessageFromOtherPkg a_message_from_other_pkg         = 22;
}

message NestedMessage {
    int32 a_int32       = 1;
    int64 a_int64       = 2;
    uint32 a_uint32     = 3;
    uint64 a_uint64     = 4;
    sint32 a_sint32     = 5;
    sint64 a_sint64     = 6;
    fixed32 a_fixed32   = 7;
    fixed64 a_fixed64   = 8;
    sfixed32 a_sfixed32 = 9;
    sfixed64 a_sfixed64 = 10;
    bool a_bool         = 11;
    string a_string     = 12;
    bytes a_bytes       = 13;
    double a_double     = 14;
    float a_float       = 15;
}
